--- a/styles.css
+++ b/styles.css
@@ -87,8 +87,12 @@ body
 	height:600px;
 	background:red;
 }
+.left{
+	
+}
 .box
 {
+	background:#97FFFF;
 	width:100%;
 	border:1px solid #ddd;
 	margin-top:15px;
@@ -106,15 +110,7 @@ body
 	margin-bottom:0;
 	text-transform:uppercase;
 }
-.box_top a
-{
-	display: block;
-	padding-left:15px;
-	line-height:34px;
-	color:#fff;
-	margin-bottom:0;
-	text-transform:uppercase;
-}
+
 .box_center
 {
 	margin-top:15px;
@@ -221,7 +217,7 @@ body
 }
 #baiviet_l li a:hover
 {
-	color:#1b926c;
+	color:red;
 	text-decoration: none;
 }
 
