--- a/styles.css
+++ b/styles.css
@@ -18,12 +18,14 @@ body
 #logo p
 {
 	margin-bottom: 0;
-	padding:20px 0;
+	padding:16px 0;
+	background-color: rgb(114,225,208);
 }
 #menu_top li
 {
 	float: left;
 	position:relative;
+	font-family: "times new roman";
 }
 #menu_top ul li {
 	width:150px;
@@ -32,18 +34,19 @@ body
 #menu_top li a
 {
 	text-decoration:none;
-	color:black;
+	color:white;
+	list-style-type: lower-roman;
 	display: block;
 	padding:10px 20px;
 	border:1px dotted #ccc;
 }
 #menu_top a:hover
 {
-	background:#333;
+	background:rgb(114,225,208);
 	text-decoration: none;
 }
 #menu_top ul a{
-	background:green;
+	background:rgb(114,225,208);
 }
 #menu_top li ul {
 	position:absolute;
@@ -59,6 +62,7 @@ body
 	 position: absolute;
 	 right:10px;
 	 top:0;
+	 border: 3px;
 }
 #search input[type="text"]
 {
@@ -83,9 +87,9 @@ body
 	font-weight: bold;
 }
 .images{
+	background-image: url("bia2.png");
 	width:100%;
-	height:600px;
-	background:red;
+	height:300px;
 }
 .left{
 	
