Update and rename styles.css to style.css

--- a/style.css
+++ b/style.css
@@ -153,6 +153,51 @@ body
 	color:#f36e1e;
 	text-decoration: none;
 }
+#vans1{
+	width: 200px;
+	height: auto;
+
+}
+#ad2{
+	width: 100px;
+	height: auto;
+
+}
+#adi1{
+	width: 200px;
+	height: auto;
+
+}
+#vans4{
+	width: 200px;
+	height: auto;
+
+}
+#vans5{
+	width: 200px;
+	height: auto;
+
+}
+#adi3{
+	width: 200px;
+	height: auto;
+
+}
+#ad4{
+	width: 200px;
+	height: auto;
+
+}
+#adi5{
+	width: 200px;
+	height: auto;
+
+}
+#adi6{
+	width: 200px;
+	height: auto;
+
+}
 #support
 {
 	padding-left:10px;
