--- a/css/style.css
+++ b/css/style.css
@@ -3,82 +3,118 @@ body
 {
 	font-family:arial;
 }
+#menu
+{
+	position: absolute;
+}
 
 #menu_top
 {
-	position:relative;
 	list-style: none;
 	margin:0;
-	font-size:16px;
+	font-size:15px;
 	padding:0;
 }
+#menu_topgd
+{
+	list-style: none;
+	margin:0;
+	font-size:18px;
+	padding:0;
+}
+
 #logo 
 {
 
 	margin-bottom: 0;
-	padding:16px 0;
+	padding:10px 0;
 	background-color: rgb(114,225,208);
 }
 #logo img {
-	width:300px;
+	width:200px;
 	padding-left:20px;
 }
-#menu_top li
+#menu_topgd li
 {
-	font:normal bold 18px/35px verdana, sans-serif;
-	text-align:center;
-
+	float: left;
 	position:relative;
 	font-family: "times new roman";
 }
-#menu_top div {
+#menu_topgd ul li {
+	width:150px;
+	height:40px;
+
+}
+#menu_topgd li a
+{
 	border-radius:5px;
-	padding:10px;
+	text-decoration:none;
+	color:black;
+	list-style-type: lower-roman;
+	display: block;
+	padding:10px 30px;
 	border:1px dotted #ccc;
-	
+}
+#menu_topgd a:hover
+{
+	background:rgb(114,225,208);
+	text-decoration: underline;
+}
+#menu_topgd ul a{
+	background:rgb(114,225,208);
+
+}
+#menu_topgd ul a:hover{
+color:red;
+}
+#menu_topgd li ul {
+	position:absolute;
+	display:none;
+	list-style:none;
+}
+#menu_topgd li:hover ul {
+	display:block;
+}
+#menu_top li
+{
+	float: left;
+	position:relative;
+	font-family: "times new roman";
+}
+#menu_top ul li {
+	width:150px;
+	height:40px;
+
 }
 #menu_top li a
 {
-
-	text-decoration:blink;
-	color:black;
-	list-style-type: none;
+	border-radius:5px;
+	text-decoration:none;
+	color:white;
+	list-style-type: lower-roman;
 	display: block;
-	
+	padding:10px 30px;
+	border:1px dotted #ccc;
 }
+#menu_top a:hover
+{
+	background:rgb(114,225,208);
+	text-decoration: underline;
+}
+#menu_top ul a{
+	background:rgb(114,225,208);
 
-#menu_top #trangchu:hover{
-	background-image:url(../images/112.jpg);
-    color:red;
-    padding:100px 10px 0;
 }
-#menu_top #khuyenmai:hover{
-	background-image:url(../images/sale.jpg);
-    color:#00FF00;
-    padding:100px 10px 0;
+#menu_top ul a:hover{
+color:red;
 }
-#menu_top #giaynam:hover{
-	background-image:url(../images/nam.jpg);
-    color:#00FF00;
-    padding:100px 10px 0;
+#menu_top li ul {
+	position:absolute;
+	display:none;
+	list-style:none;
 }
-#menu_top #giaynu:hover{
-	background-image:url(../images/nu.jpg);
-    color:red;
-    padding:100px 10px 0;
-}
-#menu_top li a {
-	background-color:rgba(0,255,0,0.3);
-	color:#0000FF;
-}
-#menu_top li ul a{
-	color:black;
-}
-#menu_top li ul a:hover{
-	color:red;
-}
-#menu_top{
-	background-color: rgba(192,192,192,0.3);
+#menu_top li:hover ul {
+	display:block;
 }
 #search
 {
@@ -112,7 +148,9 @@ body
 	font-size:12px;
 	font-weight: bold;
 }
+.images{
 
+}
 .left{
 	
 }
@@ -141,6 +179,7 @@ body
 {
 	margin-top:15px;
 }
+#
 .box_center_top
 {
 	border-bottom:3px solid #1b926c;
@@ -175,51 +214,7 @@ body
 	color:#f36e1e;
 	text-decoration: none;
 }
-#vans1{
-	width: 200px;
-	height: auto;
 
-}
-#ad2{
-	width: 100px;
-	height: auto;
-
-}
-#adi1{
-	width: 200px;
-	height: auto;
-
-}
-#vans4{
-	width: 200px;
-	height: auto;
-
-}
-#vans5{
-	width: 200px;
-	height: auto;
-
-}
-#adi3{
-	width: 200px;
-	height: auto;
-
-}
-#ad4{
-	width: 200px;
-	height: auto;
-
-}
-#adi5{
-	width: 200px;
-	height: auto;
-
-}
-#adi6{
-	width: 200px;
-	height: auto;
-
-}
 #support
 {
 	padding-left:10px;
@@ -242,8 +237,8 @@ body
 }
 #baiviet_l
 {
-	padding:10px 40px;
-	font-size:15px;
+	list-style: none;
+	padding:0 10px;
 }
 #baiviet_l li a
 {
@@ -267,20 +262,6 @@ body
 .tinhome_item
 {
 	padding-top:10px;
-	border-style: ridge; 
-	border-radius:8px;
-	margin:35px;
-}
-.tinhome_item li a{
-	text-decoration:none;
-	color:#0000FF;
-}
-.tinhome_item li a:hover{
-	color:red;
-}
-.tinhome_item:hover
-{
-	background-color:#CCFFFF;
 }
 .tinhome_item_name
 {
