--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@ body
 {
 	position: absolute;
 }
-
 #menu_top
 {
 	list-style: none;
@@ -15,65 +14,16 @@ body
 	font-size:15px;
 	padding:0;
 }
-#menu_topgd
-{
-	list-style: none;
-	margin:0;
-	font-size:18px;
-	padding:0;
-}
-
 #logo 
 {
 
 	margin-bottom: 0;
-	padding:10px 0;
+	padding:16px 0;
 	background-color: rgb(114,225,208);
 }
 #logo img {
-	width:200px;
+	width:300px;
 	padding-left:20px;
-}
-#menu_topgd li
-{
-	float: left;
-	position:relative;
-	font-family: "times new roman";
-}
-#menu_topgd ul li {
-	width:150px;
-	height:40px;
-
-}
-#menu_topgd li a
-{
-	border-radius:5px;
-	text-decoration:none;
-	color:black;
-	list-style-type: lower-roman;
-	display: block;
-	padding:10px 30px;
-	border:1px dotted #ccc;
-}
-#menu_topgd a:hover
-{
-	background:rgb(114,225,208);
-	text-decoration: underline;
-}
-#menu_topgd ul a{
-	background:rgb(114,225,208);
-
-}
-#menu_topgd ul a:hover{
-color:red;
-}
-#menu_topgd li ul {
-	position:absolute;
-	display:none;
-	list-style:none;
-}
-#menu_topgd li:hover ul {
-	display:block;
 }
 #menu_top li
 {
@@ -149,7 +99,6 @@ color:red;
 	font-weight: bold;
 }
 .images{
-
 }
 .left{
 	
@@ -179,7 +128,6 @@ color:red;
 {
 	margin-top:15px;
 }
-#
 .box_center_top
 {
 	border-bottom:3px solid #1b926c;
@@ -214,7 +162,51 @@ color:red;
 	color:#f36e1e;
 	text-decoration: none;
 }
+#vans1{
+	width: 200px;
+	height: auto;
 
+}
+#ad2{
+	width: 100px;
+	height: auto;
+
+}
+#adi1{
+	width: 200px;
+	height: auto;
+
+}
+#vans4{
+	width: 200px;
+	height: auto;
+
+}
+#vans5{
+	width: 200px;
+	height: auto;
+
+}
+#adi3{
+	width: 200px;
+	height: auto;
+
+}
+#ad4{
+	width: 200px;
+	height: auto;
+
+}
+#adi5{
+	width: 200px;
+	height: auto;
+
+}
+#adi6{
+	width: 200px;
+	height: auto;
+
+}
 #support
 {
 	padding-left:10px;
