--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body
 {
 	font-family:arial;
 }
+/*CSS cho menu*/
 #menu
 {
 	width: 100%;
@@ -246,7 +247,7 @@ box-shadow: -10px -10px 5px #666;
   -moz-box-shadow: -10px -5px 5px #666;
   -webkit-box-shadow: 10px 5px 5px #666;
 }
-
+/* css cho phần footer*/
 #bg_footer
 {
 	background:#333;
@@ -269,11 +270,79 @@ box-shadow: -10px -10px 5px #666;
 h3{
 	text-align:center;
 }
+/* */
 .hide-me {
   display: none; 	
   opacity: 0;
   transform: scale(.75);
 }
 
-#baiviet_1 li p{
+#logo 
+{
+
+  margin-bottom: 0;
+  padding:16px 0;
+  background-color: rgb(114,225,208);
+  text-align: center;
 }
+#logo img {
+  width:200px;
+}
+#bg_footer
+{
+  background:#333;
+  margin-top:20px;  
+  width:100%;
+}
+#footer
+{
+  padding-top:10px;
+  padding-bottom:10px;
+}
+#footer p
+{
+  font-size:12px;
+  color:#fff;
+  margin-bottom:0;
+  line-height:25px;
+  text-align: center;
+}
+.container{
+  width: 80%;
+  height: auto;
+
+}
+.shoppingcard
+{
+  padding-top: 5px;
+  border
+}
+.shoppingcard p label {
+  font-size: 16px;
+  font-weight: normal;
+  color:  black;
+  display: block;
+  font-family: "sans-serif";
+
+}
+.shoppingcard label {
+  margin-left: 15px;
+
+}
+.shoppingcard input {
+  height: 50px;
+  width: 350px;
+  margin-left: 15px;
+  border: 1px; 
+  background-color:rgb(240, 240, 240);
+
+}
+.shoppingcard button{
+  height: 50px;
+  width: 350px;
+  font-family: "sans-serif";
+  border: 0px;
+  margin-left: 15px;
+  background-color: rgb(114,225,208);
+}
+
